Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1 {
 
 .letter p, .letter ul {
     font-size: 10px;
-    line-height: 1.;
+    line-height: 1.3;
     text-align: center;
 }
 
